Fix bug with window sidebar alignment on big screens

--- a/src/trello/features/window/manage-on-big-screens.scss
+++ b/src/trello/features/window/manage-on-big-screens.scss
@@ -5,7 +5,7 @@
 
   .window {
     top: 0 !important;
-    width: 750px !important;
+    width: 764px !important;
   }
 
   .board-wrapper {
